--- a/public/assets/css/indexStyleLESS.less
+++ b/public/assets/css/indexStyleLESS.less
@@ -36,7 +36,7 @@ form {
 	margin: 5px 5px;
 	padding: 15px 30px;
 	width: 25%;
-	height: 500px;
+	height: 600px;
 }
 
 .input_field{
@@ -54,6 +54,8 @@ form {
 #control_panel{
 	border: @basicBorder;
 	height: 100px;
+	margin: 5px 5px;
+	padding: 15px 30px;
 }
 
 #myDialog { display: none; }
@@ -63,4 +65,16 @@ form {
     position: absolute;
     top: 0;
     left: 0;    
+}
+
+#display_panel{
+	border: @basicBorder;
+	background-color: @darkColor;
+margin: 5px 5px;
+	padding: 15px 30px;
+}
+
+#all-results{
+	margin: 5px 5px;
+	padding: 15px 30px;
 }
