--- a/public/assets/css/indexStyleLESS.less
+++ b/public/assets/css/indexStyleLESS.less
@@ -53,7 +53,6 @@ form {
 
 #control_panel{
 	border: @basicBorder;
-	height: 100px;
 	margin: 5px 5px;
 	padding: 15px 30px;
 }
@@ -72,9 +71,20 @@ form {
 	background-color: @darkColor;
 margin: 5px 5px;
 	padding: 15px 30px;
+	width: 25%;
 }
 
 #all-results{
 	margin: 5px 5px;
 	padding: 15px 30px;
+}
+
+#form {
+	
+	width: 25%;
+}
+
+#topContainer{
+	display:flex;
+	flex-direction: row;
 }
