Changes to PT section

--- a/public/assets/css/indexStyleLESS.less
+++ b/public/assets/css/indexStyleLESS.less
@@ -119,3 +119,13 @@ form {
     justify-content: center;
     width: 100%;
 }
+
+#editPTPop{
+   display: none;
+}
+
+
+#form{
+    display: none;
+
+}
